<resources>
    <string name="app_name">meuqueridoprof</string>
    <string name="hint_email">Seu email</string>
    <string name="hint_senha">Sua senha</string>
    <string name="text_btn_logar">Logar</string>
    <string name="text_cadastrar_se">Não tem conta? Cadastre-se</string>
    <string name="hint_seu_nome">Seu nome</string>
    <string name="text_btn_cadastrar">Cadastrar</string>
</resources>
